This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-May-2010 Jean-Marie Simonet
#Fixed [20344] menu item alias . thanks Dennis and Elin

06-May-2010 Mark Dexter
# Fix problem with sample data duplicate mainmenu (Elin Waring)
# Show edit icon on frontpage and category blog when print and email icons disabled

06-May-2010 Christophe Demko
 # Verifying array observer has not been already attached
 #^ Accept Dennis Hermatski patch concerning language improvements
 # Fixed bug in caching in various controller ('language'->'lang') # Fixed bug in the JObservable::attach method when the observer is an array: it did not use the correct key
 #$ Fixed ordering with image field in languages view (Thanks Dennis Hermacki)
 # Fix ordering with folder field in plugins view
 # [#20350] [patch] Core components fail in attempt to add multiselect.js in back-end list views.
 $ Change the description of the sef language field
 ^ Change the JHtmlContentLanguage::published function to JHtmlContentLanguage::existing

05-May-2010 Andrew Eddie
 ^ Accept patch [#20167] Caching of template query + JSite::getTemplate() refactoring to JDatabaseQuery (Dennis Hermacki).
 # Fix bug in the menu batch template which didn't show the menu items to copy or move to; fix bug in display of menu name (Júlio Pontes).
 # Fix bug in JApplicationSite::addClientInfo (Júlio Pontes).

05-May-2010 Christophe Demko
# Correcting a bug in the com_installer manage view
$ Change a string in com_languages

05-May-2010 Jean-Marie Simonet
$ Adding delete strings and code to Menu type deleting.

05-May-2010 Andrew Eddie
 ^ Renamed "installer" plugin group to "extension".